Corrigido bug onde o texto da página inicial estava dando overflow

--- a/src/pages/Inicio.css
+++ b/src/pages/Inicio.css
@@ -16,7 +16,9 @@
     text-align: center;
     margin-top: 100px;
     margin-bottom: 100px;
+    overflow-wrap: break-word;
 }
+
 
 .inicioFotoImg {
     display: flex;
@@ -81,6 +83,7 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
+    max-width: 100px;
 }
 
 .inicioHistoria {
